2019-05-14      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/gm2-mode.el:  improved the regexp for ident matching.

2019-05-13      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  many changes and a partial push
          to allow parallel builds.  Still not working.
	* gm2/el/gm2-mode.el:  implement procedure/module/end block
	  names to use function-face.

2019-05-10      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  updated the GPL (formatting, dates
          and address).
	* gm2/Makefile.in:  removed.
	* gm2/config-lang.in:  updated the GPL (formatting, dates
          and address).  Removed reference to Makefile.in.
	* gm2/gm2-compiler/M2Options.def:  (SetUnusedVariableChecking)
          exported.  (SetUnusedParameterChecking) exported.
	* gm2/gm2-libs/config-host.in:  updated version to 1.9.1.
	* gm2/gm2.texi:  updated FDL from gcc/doc/gcc.texi.
	* gm2/gm2spec.c:  corrected dates.
	* gm2/version.c:  changed date to 1.9.1.
	* gm2/gm2-compiler/M2Quads.mod:  (BuildDifAdrFunction)
          corrected error messages.  Also use MetaError rather than
	  WriteFormat.
	* gm2/gm2-compiler/M2Quads.mod:  (BuildHighFunction)
          use MetaError rather than WriteFormat and add more information
          into the error message.
	* gm2/gm2spec.c:  fixed many comments to comply with GNU coding
	  standards.  Corrected some older comments.

2019-05-09      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2Options.def:  (SetWall) new procedure.
	* gm2/gm2-compiler/M2Options.mod:  (SetWall) implement by setting
	  UnusedVariableChecking, UnusedParameterChecking,
          PedanticParamNames, StudentChecking, PedanticCast to value.
	* gm2/gm2-lang.c:  introduce new case clause for -Wall.
	* gm2/lang.opt:  enable -Wall for Modula-2.
	* gm2/gm2.texi:  document availability of -Wall.
	* gm2/gm2-compiler/M2Quads.mod:  corrected error message format
	  specifier.
	* gm2/gm2-compiler/M2Quads.mod: